[bug] home events overflow

--- a/app/assets/stylesheets/app.layout.scss
+++ b/app/assets/stylesheets/app.layout.scss
@@ -619,3 +619,9 @@ body.container{
 .calendar-filter-aside {
   padding: 20px;
 }
+
+.home-events {
+  .event-description {
+    overflow: hidden;
+  }
+}
